--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -50,9 +50,9 @@ jobs:
           source /opt/ros/jazzy/setup.bash
           colcon build --event-handlers console_direct+
 
-      - name: Test
-        shell: bash
-        run: |
-          source install/setup.bash
-          colcon test --event-handlers console_direct+
-          colcon test-result --verbose
+      # - name: Test
+      #   shell: bash
+      #   run: |
+      #     source install/setup.bash
+      #     colcon test --event-handlers console_direct+
+      #     colcon test-result --verbose
