--- a/my_interface/CMakeLists.txt
+++ b/my_interface/CMakeLists.txt
@@ -18,6 +18,7 @@ find_package(geometry_msgs REQUIRED)
 rosidl_generate_interfaces(${PROJECT_NAME}
   "srv/GetPose.srv"
   "action/Goto.action"
+  "msg/Detect.msg"
   DEPENDENCIES geometry_msgs
 )
 
